--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body{
 #tasklist::-webkit-scrollbar{
   display:none
 }
+#tasklist::-webkit-scrollbar-thumb{
+  background-color:rgb(143,143,143);
+  border-radius:50px
+}
